testsuite/tests/dependent/should_fail/T16418.hs
{-# LANGUAGE PolyKinds #-}
{-# LANGUAGE ScopedTypeVariables #-}
module T16418 where

import Data.Kind

data SameKind :: forall k. k -> k -> Type

f :: forall a k (b :: k). SameKind a b -> ()
f = g
  where
    g :: SameKind a b -> ()
    g _ = ()
